// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LazyBackground should have an id 1`] = `
<div
  className="lazy"
  data-bg="url(/img.jpeg)"
  id="lazyBackground"
/>
`;

exports[`LazyBackground should have classes 1`] = `
<div
  className="lazy class1 class2"
  data-bg="url(/img.jpeg)"
/>
`;

exports[`LazyBackground should render a div with a background image with a src 1`] = `
<div
  className="lazy"
  data-bg="url(/img.jpeg)"
/>
`;

exports[`LazyBackground should render children 1`] = `
<div
  className="lazy"
  data-bg="url(/img.jpeg)"
>
  <span>
    Hello World
  </span>
</div>
`;

exports[`LazyBackground should require a src prop 1`] = `
"Warning: Failed prop type: The prop \`src\` is marked as required in \`LazyBackground\`, but its value is \`undefined\`.
    in LazyBackground"
`;
